--- a/lokovei-ERP/asset/stylesheets/queue_factory.css
+++ b/lokovei-ERP/asset/stylesheets/queue_factory.css
@@ -17,52 +17,65 @@
 .job .toRight {
   margin-left: auto;
 }
+/* line 17, ../sass/queue_factory.sass */
+.job button {
+  position: absolute;
+  bottom: 4px;
+  left: 4px;
+}
 
-/* line 19, ../sass/queue_factory.sass */
+/* line 23, ../sass/queue_factory.sass */
 .lineName {
   margin-right: 12px;
 }
 
-/* line 22, ../sass/queue_factory.sass */
+/* line 26, ../sass/queue_factory.sass */
 .day {
   float: left;
-  border-radius: 8px;
   min-width: 150px;
-  background-color: #F5F5F5;
   margin-right: 12px;
+  border-radius: 8px;
+  background-color: #F5F5F5;
 }
 
-/* line 29, ../sass/queue_factory.sass */
+/* line 33, ../sass/queue_factory.sass */
 .dayTitle {
   text-align: center;
 }
 
-/* line 32, ../sass/queue_factory.sass */
+/* line 36, ../sass/queue_factory.sass */
 .line {
-  min-height: 140px;
   height: 600px;
   max-width: 800px;
+  min-height: 140px;
   padding-left: 12px;
 }
 
-/* line 40, ../sass/queue_factory.sass */
+/* line 44, ../sass/queue_factory.sass */
 .wrapper {
   width: 200000px;
   padding-left: 32px;
 }
 
-/* line 44, ../sass/queue_factory.sass */
+/* line 48, ../sass/queue_factory.sass */
 .screen {
   width: 100%;
   overflow-x: scroll;
 }
 
-/* line 48, ../sass/queue_factory.sass */
+/* line 52, ../sass/queue_factory.sass */
 .info {
   position: absolute;
   right: 8px;
-  top: calc( 100% - 35px);
+  top: calc( 100% - 24px);
   height: 16px;
   width: 16px;
   cursor: pointer;
+}
+
+/* line 60, ../sass/queue_factory.sass */
+#newJobTable {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
 }
