修正 info 顯示項目

--- a/lokovei-ERP/asset/sass/queue_factory.sass
+++ b/lokovei-ERP/asset/sass/queue_factory.sass
@@ -5,11 +5,12 @@
   float: left
   position: relative
   width: 150px
-  height : 130px
+  height : 180px
   max-height: 160px
   overflow: visible
   margin-right: 4px
   cursor: -webkit-grab
+  // padding-bottom: 40px
   &:last-child
     margin-right: 22px
   .toRight
