--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -32,15 +32,18 @@ block content
 
       - var d = new Date()
       - var index = 0; //- index is using on change day
-      - for( var day = 0; day < 3; day++ )
+      - for( var day = 0; day < 3 + 1; day++ )
         .day
           - var time = ( Math.round(d / 86400000) + day )  * 100;
           .thumbnail.dayTitle
-            h4= d.getFullYear() + ' / ' + (d.getMonth() + 1) + ' / ' + ( d.getUTCDate() + day )
-            form.form-inline
-              .form-group
-                input(type="number" min="0" style="width:80px" data-time=time).form-control
-                button.doSort.btn.btn-success(data-time=time) 排程
+            - if( day != 3 )
+              h4= d.getFullYear() + ' / ' + (d.getMonth() + 1) + ' / ' + ( d.getUTCDate() + day )
+              form.form-inline
+                .form-group
+                  input(type="number" min="0" style="width:80px" data-time=time).form-control
+                  button.doSort.btn.btn-success(data-time=time) 排程
+            - else
+              h4 尚未排程
           //- show job
           .line(id='line'+line ondrop="drop(event)" ondragover="allowDrop(event)" data-time= time)
             - for( var j = 0; j < all.length; j++ )
@@ -48,8 +51,8 @@ block content
               - job._id = job._id.toString()
               //- debug
               //- h1= index
-              //- h4= time
-              - if( job.time == time )
+              //- h4= job.time
+              - if( job.time == time || ( day == 3 && job.time == 0) )
                 - index++;
                 - var id = 'line'+line+'job'+j;
                 .thumbnail.job(id=id draggable="true" ondragstart="drag(event)" data-time=job.time data-oid=job._id data-status=job.status )
@@ -83,7 +86,7 @@ block content
                     - var order = '<p>訂單編號：' + job.oid; //- '<br/>經銷商：' + job. + '<br/>訂單出車日期：2015/5/12</p>'
 
                     //- 測試用功能
-                    span.info.glyphicon.glyphicon-tags.job-info( aria-hidden='true', tabindex='0', role='button', data-toggle='popover', data-trigger='click', title='訂單資訊', data-html="true", data-content=order)
+                    //- span.info.glyphicon.glyphicon-tags.job-info( aria-hidden='true', tabindex='0', role='button', data-toggle='popover', data-trigger='click', title='訂單資訊', data-html="true", data-content=order)
               //- if( index >= all.length ) { index++; }
 
   #statusDialog.modal.fade.bs-example-modal-sm(tabindex='-1', role='dialog', aria-labelledby='mySmallModalLabel', aria-hidden='true')
