--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   link(rel="stylesheet", href="stylesheets/queue_factory.css")
   script(src="javascript/queue_factory.js")
+  script(src="javascript/queue_factory_cal.js")
   script(src="javascript/queue_factory_drag.js")
 
   #newJobTable.thumbnail.lineName
@@ -44,6 +45,8 @@ block content
                   button.doSort.btn.btn-success(data-time=time) 排程
             - else
               h4 尚未排程
+          .thumbnail.cal
+
           //- show job
           .line(id='line'+line ondrop="drop(event)" ondragover="allowDrop(event)" data-time= time)
             - for( var j = 0; j < all.length; j++ )
@@ -55,7 +58,7 @@ block content
               - if( job.time == time || ( day == 3 && job.time == 0) )
                 - index++;
                 - var id = 'line'+line+'job'+j;
-                .thumbnail.job(id=id draggable="true" ondragstart="drag(event)" data-time=job.time data-oid=job._id data-status=job.status )
+                .thumbnail.job(id=id draggable="true" ondragstart="drag(event)" data-time=job.time data-oid=job._id data-status=job.status data-pro=job.pid+'/'+job.pSpec )
                   p
                     = job.pid
                     br
@@ -84,6 +87,7 @@ block content
                     - else
                       button.status.btn.btn-default(data-id=id  data-time=job.time data-oid=job._id data-status=job.status )&attributes(uid) 尚未設定
                     - var order = '<p>訂單編號：' + job.oid; //- '<br/>經銷商：' + job. + '<br/>訂單出車日期：2015/5/12</p>'
+
 
                     //- 測試用功能
                     //- span.info.glyphicon.glyphicon-tags.job-info( aria-hidden='true', tabindex='0', role='button', data-toggle='popover', data-trigger='click', title='訂單資訊', data-html="true", data-content=order)
