--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -36,6 +36,7 @@ block content
       - for( var day = 0; day < 3 + 1; day++ )
         .day
           - var time = ( Math.round(d / 86400000) + day )  * 100;
+          - if(day == 3 ) { time = 0; }
           .thumbnail.dayTitle
             - if( day != 3 )
               h4= d.getFullYear() + ' / ' + (d.getMonth() + 1) + ' / ' + ( d.getUTCDate() + day )
