加入 today job view

--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -26,6 +26,10 @@ html
               a(href='/order/startTime') 訂單佇列
             li
               a(href='/factory') 產線佇列
+            li
+              a(href='/output') 今日出貨
+            li
+              a(href='/job') 今日工作
           //- form.navbar-form.navbar-left(role='search')
           //-   .form-group
           //-     input.form-control(type='text', placeholder='Search')
