--- a/lokovei-ERP/views/job.jade
+++ b/lokovei-ERP/views/job.jade
@@ -8,7 +8,7 @@ block content
       .day
         .thumbnail.dayTitle
           - var d = new Date();
-          h4= d.getFullYear() + ' / ' + (d.getMonth() + 1) + ' / ' + d.getUTCDate() + '   今日出貨項目'
+          h4= d.getFullYear() + ' / ' + (d.getMonth() + 1) + ' / ' + d.getUTCDate() + '   今日產線工作'
         //- .thumbnail.cal
 
         //- show job
