--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -13,3 +13,15 @@ p
   float: right
   margin-right: 200px
   // background-color: #333
+
+.chose
+  margin-left: 12px
+
+#ctrl
+  position: fixed
+  top: 100px
+  left: 20px
+
+@media print
+  #ctrl
+    display: none
