--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -46,8 +46,8 @@ html
               ul.dropdown-menu(role='menu')
                 li
                   a(href='/crud/product') 產品設定
-                li
-                  a(href='/crud/line') 產線設定
+                //- li
+                //-   a(href='/crud/line') 產線設定
                 li
                   a(href='/crud/battery') 電池型號設定
                 li
