列印功能正常

--- a/lokovei-ERP/asset/sass/today.sass
+++ b/lokovei-ERP/asset/sass/today.sass
@@ -66,3 +66,8 @@
   right: 4px
   text-align: center
   border-radius: 50%
+.print
+  position: absolute
+  bottom: 38px
+  right: 4px
+  // border-radius: 50%
