--- a/lokovei-ERP/asset/stylesheets/today.css
+++ b/lokovei-ERP/asset/stylesheets/today.css
@@ -80,3 +80,10 @@
   text-align: center;
   border-radius: 50%;
 }
+
+/* line 69, ../sass/today.sass */
+.print {
+  position: absolute;
+  bottom: 38px;
+  right: 4px;
+}
