--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -11,7 +11,7 @@ p
   font-size: 1.3em
   font-weight: bolder
   float: right
-  margin-right: 200px
+  // margin-right: 200px
   // background-color: #333
 
 .chose
@@ -25,3 +25,5 @@ p
 @media print
   #ctrl
     display: none
+  input
+    border: 0px solid white
