--- a/lokovei-ERP/asset/sass/today.sass
+++ b/lokovei-ERP/asset/sass/today.sass
@@ -12,6 +12,15 @@
     position: absolute
     bottom: 4px
     right: 4px
+.car
+  width: 850px
+  margin: 0px auto
+  margin-bottom: 12px
+  text-align: left
+  .car-info
+    margin-left: 12px
+    padding-left: 12px
+    border-left: 3px solid #676767
 
 .lineName
   margin-right: 12px
