--- a/lokovei-ERP/asset/stylesheets/today.css
+++ b/lokovei-ERP/asset/stylesheets/today.css
@@ -14,26 +14,32 @@
   right: 4px;
 }
 
-/* line 15, ../sass/today.sass */
+/* line 16, ../sass/today.sass */
 .car {
   width: 850px;
   margin: 0px auto;
   margin-bottom: 12px;
   text-align: left;
+  padding-left: 12px;
+  border: 2px solid green;
 }
-/* line 20, ../sass/today.sass */
+/* line 23, ../sass/today.sass */
+.car .title {
+  color: green;
+}
+/* line 25, ../sass/today.sass */
 .car .car-info {
   margin-left: 12px;
   padding-left: 12px;
-  border-left: 3px solid #676767;
+  border-left: 3px solid green;
 }
 
-/* line 25, ../sass/today.sass */
+/* line 30, ../sass/today.sass */
 .lineName {
   margin-right: 12px;
 }
 
-/* line 28, ../sass/today.sass */
+/* line 33, ../sass/today.sass */
 .day {
   max-width: 900px;
   margin-right: 12px;
@@ -41,24 +47,24 @@
   background-color: #F5F5F5;
 }
 
-/* line 34, ../sass/today.sass */
+/* line 39, ../sass/today.sass */
 .dayTitle {
   text-align: center;
 }
 
-/* line 37, ../sass/today.sass */
+/* line 42, ../sass/today.sass */
 .line {
   max-width: 850px;
   min-height: 140px;
   padding-bottom: 60px;
 }
 
-/* line 43, ../sass/today.sass */
+/* line 48, ../sass/today.sass */
 .screen {
   width: 100%;
 }
 
-/* line 46, ../sass/today.sass */
+/* line 51, ../sass/today.sass */
 .info {
   position: absolute;
   right: 8px;
@@ -67,7 +73,7 @@
   width: 16px;
 }
 
-/* line 54, ../sass/today.sass */
+/* line 59, ../sass/today.sass */
 #newJobTable {
   z-index: 99;
   position: fixed;
@@ -75,14 +81,14 @@
   left: 0px;
 }
 
-/* line 61, ../sass/today.sass */
+/* line 66, ../sass/today.sass */
 .job-info {
   font-size: 1.2em;
   width: 49%;
   float: left;
 }
 
-/* line 67, ../sass/today.sass */
+/* line 72, ../sass/today.sass */
 .num {
   position: absolute;
   color: black;
@@ -95,7 +101,7 @@
   border-radius: 50%;
 }
 
-/* line 78, ../sass/today.sass */
+/* line 83, ../sass/today.sass */
 .print {
   position: absolute;
   bottom: 38px;
