--- a/lokovei-ERP/asset/sass/today.sass
+++ b/lokovei-ERP/asset/sass/today.sass
@@ -12,15 +12,20 @@
     position: absolute
     bottom: 4px
     right: 4px
+
 .car
   width: 850px
   margin: 0px auto
   margin-bottom: 12px
   text-align: left
+  padding-left: 12px
+  border: 2px solid green
+  .title
+    color: green
   .car-info
     margin-left: 12px
     padding-left: 12px
-    border-left: 3px solid #676767
+    border-left: 3px solid green
 
 .lineName
   margin-right: 12px
