修正出車統計資訊錯誤

--- a/lokovei-ERP/asset/sass/today.sass
+++ b/lokovei-ERP/asset/sass/today.sass
@@ -19,6 +19,7 @@
   margin-bottom: 12px
   text-align: left
   padding-left: 12px
+  padding-bottom: 24px
   border: 2px solid green
   .title
     color: green
