--- a/lokovei-ERP/asset/sass/today.sass
+++ b/lokovei-ERP/asset/sass/today.sass
@@ -86,3 +86,15 @@
   bottom: 38px
   right: 4px
   // border-radius: 50%
+#ctrl
+  position: fixed
+  top: 100px
+  left: 20px
+
+@media print
+  #ctrl
+    display: none
+  input
+    border: 0px solid white
+  .print
+    display: none
