--- a/lokovei-ERP/views/output.jade
+++ b/lokovei-ERP/views/output.jade
@@ -4,7 +4,7 @@ block content
   link(rel="stylesheet", href="stylesheets/today.css")
 
   #ctrl
-    button#print.btn.btn-success 列印檢驗單/合格證
+    button#print.btn.btn-success 列印今日出貨列表
   script(type='text/javascript', language='JavaScript').
     function varitext(text){
     text=document
