--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -32,3 +32,11 @@ img
   margin-left: 200px
   width: 800px
 
+.mask
+  position: absolute
+  top: 100
+  left: 200
+  .text-1
+    position: absolute
+    top: 100
+    left: 200
