--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -40,6 +40,5 @@ img
   top: 100
   left: 200
   .text-1
-    position: absolute
-    top: 100
-    left: 200
+    margin-left: 200px
+    margin-top: 200px
