--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -59,7 +59,6 @@ img {
 }
 /* line 42, ../sass/print_order.sass */
 .mask .text-1 {
-  position: absolute;
-  top: 100;
-  left: 200;
+  margin-left: 200px;
+  margin-top: 200px;
 }
