--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -40,5 +40,8 @@ img
   top: 100
   left: 200
   .text-1
-    margin-left: 200px
-    margin-top: 200px
+    margin-left: 258px
+    margin-top: 450px
+  .text-2
+    margin-left: 360px
+    margin-top: 450px
