--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -39,6 +39,10 @@ img
   position: absolute
   top: 100
   left: 200
+  *
+    position: absolute
+    top: 0px
+    left: 0px
   .text-1
     margin-left: 258px
     margin-top: 450px
