--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -43,6 +43,7 @@ img
     position: absolute
     top: 0px
     left: 0px
+    text-align: left
   .text-1
     margin-left: 258px
     margin-top: 450px
