--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -43,10 +43,16 @@ img
     position: absolute
     top: 0px
     left: 0px
-    text-align: left
+    width: 200px
   .text-1
     margin-left: 258px
     margin-top: 450px
   .text-2
     margin-left: 360px
     margin-top: 450px
+  .text-3
+    margin-left: 258px
+    margin-top: 480px
+  .text-4
+    margin-left: 360px
+    margin-top: 480px
