--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -62,7 +62,7 @@ img {
   position: absolute;
   top: 0px;
   left: 0px;
-  text-align: left;
+  width: 200px;
 }
 /* line 47, ../sass/print_order.sass */
 .mask .text-1 {
@@ -73,4 +73,14 @@ img {
 .mask .text-2 {
   margin-left: 360px;
   margin-top: 450px;
+}
+/* line 53, ../sass/print_order.sass */
+.mask .text-3 {
+  margin-left: 258px;
+  margin-top: 480px;
+}
+/* line 56, ../sass/print_order.sass */
+.mask .text-4 {
+  margin-left: 360px;
+  margin-top: 480px;
 }
