--- a/lokovei-ERP/views/print_order.jade
+++ b/lokovei-ERP/views/print_order.jade
@@ -18,8 +18,10 @@ block content
 
   img(src="/output.png")
   .mask
-    .text-1 型號號碼
-    .text-2 車號號碼
+    .text-1= data.pid.substring( data.pid.indexOf('-'), data.pid.length)
+    .text-2= data.pSpec
+    .text-3= data.pid.substring(0, data.pid.indexOf('-'))
+    .text-4= data.pSpec
 
   .print
   //-   center
