--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -29,6 +29,9 @@ p
     border: 0px solid white
   img
     display: none
+  .mask
+    padding-top: 140px
+    left: 0px
 
 img
   position: absolute
@@ -51,11 +54,11 @@ img
     margin-left: 258px
     margin-top: 450px
   .text-2
-    margin-left: 360px
+    margin-left: 370px
     margin-top: 450px
   .text-3
     margin-left: 258px
     margin-top: 480px
   .text-4
-    margin-left: 360px
+    margin-left: 370px
     margin-top: 480px
