--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -46,8 +46,14 @@ p {
   img {
     display: none;
   }
+
+  /* line 32, ../sass/print_order.sass */
+  .mask {
+    padding-top: 140px;
+    left: 0px;
+  }
 }
-/* line 33, ../sass/print_order.sass */
+/* line 36, ../sass/print_order.sass */
 img {
   position: absolute;
   top: 100;
@@ -56,37 +62,37 @@ img {
   width: 800px;
 }
 
-/* line 40, ../sass/print_order.sass */
+/* line 43, ../sass/print_order.sass */
 .mask {
   position: absolute;
   top: 100;
   left: 200;
   font-size: 0.8em;
 }
-/* line 45, ../sass/print_order.sass */
+/* line 48, ../sass/print_order.sass */
 .mask * {
   position: absolute;
   top: 0px;
   left: 0px;
   width: 200px;
 }
-/* line 50, ../sass/print_order.sass */
+/* line 53, ../sass/print_order.sass */
 .mask .text-1 {
   margin-left: 258px;
   margin-top: 450px;
 }
-/* line 53, ../sass/print_order.sass */
+/* line 56, ../sass/print_order.sass */
 .mask .text-2 {
-  margin-left: 360px;
+  margin-left: 370px;
   margin-top: 450px;
 }
-/* line 56, ../sass/print_order.sass */
+/* line 59, ../sass/print_order.sass */
 .mask .text-3 {
   margin-left: 258px;
   margin-top: 480px;
 }
-/* line 59, ../sass/print_order.sass */
+/* line 62, ../sass/print_order.sass */
 .mask .text-4 {
-  margin-left: 360px;
+  margin-left: 370px;
   margin-top: 480px;
 }
