--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -49,7 +49,7 @@ p {
 
   /* line 32, ../sass/print_order.sass */
   .mask {
-    padding-top: 200px;
+    margin-top: 200px;
     margin-left: -200px;
     left: 0px;
   }
